--- a/.github/workflows/Pipeline_CD_App.yml
+++ b/.github/workflows/Pipeline_CD_App.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
 
 env: # variables
-  RG_NAME: "RG-AKSCluster"
-  CLUSTER_NAME: "AKS-000" 
-  REGISTRY_NAME: "acrpierrc007"
+  RG_NAME: "RG-AKSCluster-nleg"
+  CLUSTER_NAME: "AKS-000-nleg" 
+  REGISTRY_NAME: "acrnleg"
   APP_NAME: "coolapi"
   IMAGE_VERSION: "1.0.0"
 
